--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <header class="Header">
         <h1>Третье задание</h1>
-        <img src="Logo.gif" alt="лапка" height="150" >
+        <img src="Logo.gif" alt="попуг" height="150" >
     </header>
 
     <nav>
